- Fixing space encoding causing issues with Actor to File name comparisons - Fixing grid layout breaking in the art selection window when file names with spaces overflow to the 2nd line

--- a/styles/artSelect.css
+++ b/styles/artSelect.css
@@ -35,4 +35,5 @@
 
 .token-variants-grid p{
     overflow: scroll;
+    white-space: nowrap;
 }
